
* Changing participant status report to have new "Breakdown by" and "Province" options
  - breakdown includes old "site or province" options and the new "quota" option
  - breaking down by quota organizes the report into quota categories (gender & age group)
  - province option restricts to participants who's primary address is in that province

====================================================================================================
1.1.6
====================================================================================================

* Participant status report restriction by participant synch date
  - This report now has a start/end date parameters which restricts the list based on when the
    participant was created in Sabretooth

* Adding quotas (full list/view/add/delete functionality)
  - Quotas are application linked, so changes made in Sabretooth will be changed in Mastodon as well

* Queue restriction by quota
  - Quotas include a "disabled" column which, when set to true, removes those participants from the
    calling queues

* Listen in to phone calls
  - Supervisors can now listen-in to their operator's live phone calls
  - The assignment list (as well as the "open assignment list") has a magnifying glass to connect to
    a call
  - Viewing an assignment also has a "listen in" button (when the assignment has a call which is
    active)

* Calendar date persistence
  - Calendars don't reset to today's date after changing event

* Various bug fixes

====================================================================================================
1.1.5
====================================================================================================

* View details added to appointment view
  - When viewing appointments a new "view details" button has been added which shows the
    participant's details
  - The participant's UID has been added to the appointment view

* Mailout report (Val's first contribution to Sabretooth!)