@@ -3,4 +3,5 @@
 SOURCE operation.sql
 SOURCE role_has_operation.sql
 SOURCE queue.sql
+SOURCE setting_value.sql
 SOURCE setting.sql
